# subscleaner

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  gitlab-ci.yml  pyproject.toml
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
.gitlab/issue_templates/: missing_ad.md
src/subscleaner/: __init__.py  subscleaner.py
tests/: test_subscleaner.py
