[tool.poetry]
name = "subscleaner"
version = "1.1.3"
description = "Remove advertisements from subtitle files"
authors = ["Roger Gonzalez <roger@rogs.me>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "subscleaner", from = "src" },
]
homepage = "https://gitlab.com/rogs/subscleaner/"
repository = "https://gitlab.com/rogs/subscleaner/"
documentation = "https://gitlab.com/rogs/subscleaner/-/blob/master/README.md"
keywords = ["subtitles", "subs"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
pysrt = "^1.1.2"
chardet = "^5.2.0"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.10.0"
python-lsp-ruff = "^2.2.0"
pre-commit = "^3.6.2"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
subscleaner = "subscleaner.subscleaner:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__init__.py"
]

line-length = 121
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "PL", "B", "A", "C4", "TID", "ERA", "RET", "W", "C90", "ARG", "Q", "FLY", "SIM", "COM", "D"]
ignore = ["E402", "PLW2901"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
